--- a/projects/project2/bugtrap1.yml
+++ b/projects/project2/bugtrap1.yml
@@ -9,7 +9,7 @@ robot:
       - type: "box"
         dimensions: [0.05, 0.5]
 
-# Non-convex bug trap obstacle
+# Bug trap obstacles
   - name: "obstacle1"
     tip: [1.0, 0.0, 0]
     geometry:
