--- a/projects/project2/homotopy2.yml
+++ b/projects/project2/homotopy2.yml
@@ -46,3 +46,32 @@ robot:
       - type: "box"
         dimensions: [2.5, 0.05]
         offset: [0, -2.0, 1.57]
+
+# Obstacles
+  - name: "box_1"
+    geometry: 
+    - type: "box"
+      dimensions: [1.5, 0.7]
+      offset: [7.5, 1.75, 2.25] 
+  
+  - name: "box_2"
+    geometry: 
+    - type: "box"
+      dimensions: [1.5, 0.7]
+      offset: [7.5, -1.75, 0.8]
+
+# Start and end goals
+states:
+  - name: "start"
+    configuration: 
+    - frame: "link_1"
+      value: [1.131]
+    - frame: "link_3"
+      value: [0.]
+
+  - name: "goal"
+    configuration: 
+    - frame: "link_1"
+      value: [2.199]
+    - frame: "link_3"
+      value: [-2.890]
