reset make file

--- a/projects/project4/Makefile
+++ b/projects/project4/Makefile
@@ -6,13 +6,11 @@ LD_FLAGS=-lcollisionchecking `pkg-config --libs ompl`
 
 # The c++ compiler to invoke
 CXX=c++
-all: Project4Pendulum 
-# Project4Car
+all: Project4Pendulum Project4Car
 
 clean:
 	rm -f *.o
-	rm -f Project4Pendulum 
-# Project4Car
+	rm -f Project4Pendulum Project4Car
 
 %.o: src/%.cpp
 	$(CXX) -c $(CXX_FLAGS) $(INCLUDE_FLAGS) $< -o $@
